syntax = "proto3";

import "user.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "scalapb/scalapb.proto";

service RealTimeQueueWorkerService {
  rpc GetNextUser(google.protobuf.Empty) returns (Response) {}
}

message Response {
  UserPosition userPosition = 1;
}

message UserPosition {
  UserSessionId  userSessionId = 1 [(scalapb.field).no_box = true];
  int32 assignedPosition = 2;
}
